SFDCProject/src/objects/Project__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <externalId>true</externalId>
        <label>Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <formula>TEXT(Service_Contract__r.Agreement_Type__c)</formula>
        <label>Agreement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Parter__c</fullName>
        <formula>Service_Contract__r.Service_Contract_Event__r.Using_Build_Partner__c</formula>
        <label>Build Parter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Phase__c</fullName>
        <label>Current Phase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Project_Phase__c</fullName>
        <formula>IF(Current_Phase__c = &quot;Project Initiation&quot;, &quot;1-Project Initiation&quot;, IF(Current_Phase__c = &quot;Contract Approval&quot;, &quot;2-Contract Approval&quot;, 
IF(Current_Phase__c = &quot;Site Audit&quot;, &quot;3-Site Audit&quot;, IF(Current_Phase__c = &quot;Design&quot;, &quot;4-Design&quot;, 
IF(Current_Phase__c = &quot;Pre-Installation Approvals&quot;, &quot;5-Pre-Installation Approvals&quot;, IF(Current_Phase__c = &quot;Installation&quot;, &quot;6-Installation&quot;, 
IF(Current_Phase__c = &quot;Completion&quot;, &quot;7-Completion&quot;, &quot;None&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Project Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Construction_Start_Date__c</fullName>
        <formula>IF(ISBLANK(Service_Contract__c),Opportunity__r.Scheduled_Construction_Start_Date__c, Service_Contract__r.Service_Contract_Event__r.Scheduled_Construction_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Construction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Branch__c</fullName>
        <formula>Opportunity__r.Install_Branch_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Partner__c</fullName>
        <formula>Proposal__r.Install_Partner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oppty_Utility__c</fullName>
        <formula>Text(Opportunity__r.Utility_Company__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(Service_Contract__r.Product_Type__c)</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Age_Category__c</fullName>
        <formula>IF(Project_Age__c &lt;= 14, &quot;0-14 days&quot;, IF(AND(Project_Age__c &gt;= 15, Project_Age__c &lt;= 30), &quot;15-30 days&quot;, 
IF(AND(Project_Age__c &gt; 30 , Project_Age__c &lt;= 60), &quot;31-60 days&quot;, IF(AND(Project_Age__c &gt; 60 , Project_Age__c &lt;= 90), &quot;61-90 days&quot;, 
IF(Project_Age__c &gt; 90, &quot;90+ days&quot;, &quot;None&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Age__c</fullName>
        <formula>IF( ISPICKVAL(Status__c , &quot;Open&quot;), (Today() - Start_Date__c) +1 , 
(End_Date__c - Start_Date__c )+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Branch__c</fullName>
        <formula>Opportunity__r.Install_Branch_Id__r.Name</formula>
        <label>Project Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Planner__c</fullName>
        <formula>IF(ISBLANK( Opportunity__r.Project_Manager__c ),&quot;&quot;, Opportunity__r.Project_Manager__r.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.Project_Manager__r.LastName)</formula>
        <label>Project Planner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Record_Link__c</fullName>
        <formula>&quot;https://na26.salesforce.com/&quot; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Name__c</fullName>
        <formula>Proposal__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate_Task_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Task Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Partner__c</fullName>
        <formula>Proposal__r.Sales_Partner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <formula>Proposal__r.Sales_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Event_Name__c</fullName>
        <formula>Service_Contract__r.Service_Contract_Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Event__c</fullName>
        <formula>Service_Contract__r.Service_Contract_Event__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Name__c</fullName>
        <formula>Service_Contract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Revisit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Revisit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIP_Customer__c</fullName>
        <formula>Opportunity__r.VIP_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIP Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X30_Day_Install_Candidate__c</fullName>
        <formula>IF(AND( Opportunity__r.Install_Branch_Id__r.X30_Day_Install__c , Opportunity__r.Jurisdiction__r.X30_Day_Install__c = TRUE),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>30 Day Install Candidate</label>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>blocked_project</fullName>
        <columns>NAME</columns>
        <columns>Service_Contract__c</columns>
        <columns>Service_Contract_Event__c</columns>
        <columns>Proposal__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Blocked</value>
        </filters>
        <filters>
            <field>Service_Contract__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>blocked project with SC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>blocked_project_with_SC</fullName>
        <columns>NAME</columns>
        <columns>Service_Contract__c</columns>
        <columns>Service_Contract_Event__c</columns>
        <columns>Proposal__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Install_Branch__c</columns>
        <columns>Sales_Partner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Blocked</value>
        </filters>
        <filters>
            <field>Service_Contract__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>blocked project with SC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>blocked_project_with_SC_no_Sales_Only</fullName>
        <columns>NAME</columns>
        <columns>Service_Contract__c</columns>
        <columns>Service_Contract_Event__c</columns>
        <columns>Proposal__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Install_Branch__c</columns>
        <columns>Sales_Partner__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Blocked</value>
        </filters>
        <filters>
            <field>Service_Contract__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Sales_Partner__c</field>
            <operation>notEqual</operation>
            <value>Legacy,LGCY Power LLC,Fluent home,LGCY Power,LLC</value>
        </filters>
        <filters>
            <field>Sales_Partner__c</field>
            <operation>notContain</operation>
            <value>LGCY Power,Red Ventures,Solar Alliance,Smart Energy</value>
        </filters>
        <label>blocked project with SC no Sales Only</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>non_sunrun_projects</fullName>
        <columns>NAME</columns>
        <columns>Install_Partner__c</columns>
        <columns>Job_Code__c</columns>
        <columns>Project_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Proposal__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Build_Parter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Install_Partner__c</field>
            <operation>equals</operation>
            <value>Sunrun</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/12/2016 12:00 AM</value>
        </filters>
        <label>sunrun projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>